--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,28 @@
 spring.application.name=GroceryWeb
-#Database connectivity
+
+# Database connectivity
 spring.datasource.url=jdbc:mysql://localhost:3306/grocery_db
 spring.datasource.username=root
 spring.datasource.password=mysql
 
-#hibernate
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Server port
 server.port=8083
+
+# File upload limits
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+
+# Email (SMTP) configuration
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nalineebodke1007@gmail.com
+spring.mail.password=omgi vvwi kbdq entg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
